# ezshopping_site

./: 404.html  LICENSE  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
design_and_architecture/: index.html
docs/: design_and_architecture.md  future_work.md  getting_started.md  index.md  nav.md  project_overview.md  requirements.md  tools_and_technologies.md
docs/snippets/: product.json
future_work/: index.html
getting_started/: index.html
nav/: index.html
project_overview/: index.html
requirements/: index.html
search/: search_index.json
snippets/: location_db_entry.json  product_image.json  user.json
stylesheets/: extra.css
tools_and_technologies/: index.html
